[package]
name = "vk-rs"
version = "0.1.2"
authors = ["atkurtul <atilkurtulmus@gmail.com>"]
edition = "2018"
build = "src/build.rs"
description = "vulkan wrapper"
license = "MIT"
repository = "https://github.com/atkurtul/vk-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
win32 = ["winapi"]
xlib = ["x11"]
xcb = []
wayland = []
android = []

[lib]
name = "vk_rs"
path = "src/lib.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[dependencies]
winapi = { version = "0.3.9", features = ["windef", "winuser", "libloaderapi"], optional = true}
x11 = { version = "2.18.2", features = ["xlib"], optional = true}

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }